--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
       <!-- Font Awesome -->
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Google Fonts Roboto -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
       <!-- Bootstrap core CSS -->
@@ -59,7 +60,7 @@
                   <h2 class="card-title">24/7, Okay, Underground parking across Twitter</h2>
                   <p class="card-text">112 Ave, Irving , 77081</p>
                   <a href="#" class="btn btn-success stretched-link">Book</a>
-                  <div class="price-tag">Marketing</div>
+                  
                </div>
             </div>
             <div>
